tests/snapshots/help__view.snap
---
source: tests/help.rs
expression: "sub_md(\"view\")"
---
stderr:

stdout:
# oro view

Get information about a package

### Usage:

```
oro view [OPTIONS] <PKG>
```

### Arguments

#### `<PKG>`

Package spec to look up

### Options

#### `-h, --help`

Print help (see a summary with '-h')

#### `-V, --version`

Print version

### Global Options

#### `--root <ROOT>`

Path to the project to operate on.

By default, Orogene will look up from the current working directory until it finds a directory with a `package.json` file or a `node_modules/` directory.

\[default: .]

#### `--registry <REGISTRY>`

Registry used for unscoped packages

\[default: https://registry.npmjs.org]

#### `--cache <CACHE>`

Location of disk cache.

Default location varies by platform.

#### `--config <CONFIG>`

File to read configuration values from.

When specified, global configuration loading is disabled and configuration values will only be read from this location.

#### `--loglevel <LOGLEVEL>`

Log output level/directive.

Supports plain loglevels (off, error, warn, info, debug, trace) as well as more advanced directives in the format `target[span{field=value}]=level`.

\[default: info]

#### `-q, --quiet`

Disable all output

#### `--json`

Format output as JSON

#### `--progress`

Whether to display a progress bar for long operations. Use `--no-progress` to disable

#### `--emoji`

Whether to display emoji. Use `--no-emoji` to disable.

By default, this will show emoji when outputting to a TTY that supports unicode.


